 2. Working tree or branch is locked only when starting up of diff tools.(Bug #942221)
This affects to all commands which use external diff. 
(qdiff, qcommit, qbrowse, qannotate, ...)

Now, you can launch 'Shelve' directly from each dialog when uncommitted change blocks action.
And you can launch 'Resolve' directly when conflicts generated. (IWATA Hidetaka #935903)

 * qannotate:
   * New command-line option `--line=N` (`-L`) to activate specified 
     line number on start of dialog. (Alexander Belchenko)
 * qbind:
   * Add push location to suggestions. (Alexander Belchenko)
 * qconflicts:
   * Added 2 resolve actions to context menu: `Take "THIS"` 
     and `Take "OTHER"`. (Alexander Belchenko)
   * Auto-refresh conflicts list after selecting a resolve action.
     (Alexander Belchenko)
 * qrevert:
    * it now does a real check to see if there are files (or merges) selected to revert -
      if not, it shows a warning message. (André Bachmann, Bug #942744)


0.22.2 - in development
-----------------------
Maintenance release.

 * qrun:
   * Localized help text for selected command is shown correctly now.
     (Alexander Belchenko, Bug #963542)
 * qshelve:
   * Pressing Ctrl+Enter in message edit area triggers shelve action.
     (IWATA Hidetaka, Bug #936982)
   * Hunks are not displayed on Mac OS. (IWATA Hidetaka, Bug #955241)
 * qgetnew:
   * Ask for verification if a checkout should go to a non-empty
     directory - this may cause unwanted conflicts (André Bachmann, Bug #938835)


0.22.1 - 2012/02/21
-------------------
Just in time for bzr 2.5.

 * New command: qignore. (Alexander Belchenko, Bug #524785)


0.22.0 "Alder" - 2012/02/07
---------------------------
What's new in this release:

QBzr 0.22 is companion release for bzr 2.5, and compatible with bzr 2.4.
This release has many improvements and bugfixes. As usual many improvements 
related to qdiff dialog.

While searching for the word or sentence all matches are highlighted.